--- a/templates/index.html
+++ b/templates/index.html
@@ -21,6 +21,8 @@
  			<div class="top">
 				<div class="wp">
 					<div class="fl"><p>服务电话：<b>17373960305</b></p></div>
+                    <div></div>
+                    <div></div>
 					<!--登录后跳转-->
                         {% if request.user.is_authenticated %}
                             <div class="personal">
