--- a/templates/index.html
+++ b/templates/index.html
@@ -27,6 +27,7 @@
                     <div></div>
 					<!--登录后跳转-->
                         {% if request.user.is_authenticated %}
+                            <div>master</div>
                             <div class="personal">
                                 <dl class="user fr">
                                     <dd>luffyk<img class="down fr" src="/static/images/top_down.png"/></dd>
