--- a/templates/index.html
+++ b/templates/index.html
@@ -23,6 +23,7 @@
 					<div class="fl"><p>服务电话：<b>17373960305</b></p></div>
 					<!--登录后跳转-->
                         {% if request.user.is_authenticated %}
+                            <div>dev</div>
                             <div class="personal">
                                 <dl class="user fr">
                                     <dd>luffyk<img class="down fr" src="/static/images/top_down.png"/></dd>
