--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
 					<!--登录后跳转-->
                         {% if request.user.is_authenticated %}
                             <div>dev</div>
+                            <div>dev2</div>
                             <div class="personal">
                                 <dl class="user fr">
                                     <dd>luffyk<img class="down fr" src="/static/images/top_down.png"/></dd>
