--- a/templates/register.html
+++ b/templates/register.html
@@ -137,11 +137,11 @@
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
                         <div class="form-group marb20 ">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
-                            <input  type="text" id="id_email" name="email" value="None" placeholder="请输入您的邮箱地址" />
+                            <input  type="text" id="id_email" name="email" value="" placeholder="请输入您的邮箱地址" />
                         </div>
                         <div class="form-group marb8 ">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-                            <input type="password" id="id_password" name="password"  value="None" placeholder="请输入6-20位非中文字符密码" />
+                            <input type="password" id="id_password" name="password"  value="" placeholder="请输入6-20位非中文字符密码" />
                         </div>
                         <div class="form-group marb8 captcha1 ">
                             <label>验&nbsp;证&nbsp;码</label>
