--- a/templates/register.html
+++ b/templates/register.html
@@ -102,6 +102,7 @@
                 <div class="tab">
                     <!--<h2 class="active">手机注册</h2>-->
                     <h2>邮箱注册</h2>
+                    <div>(确保邮箱可用)</div>
                 </div>
                 <!--<div class="tab-form">-->
                     <!--<form id="mobile_register_form" autocomplete="off">-->
@@ -135,19 +136,28 @@
                 <div class="tab-form">
                     <form id="email_register_form" method="post" action="{% url 'register' %}" autocomplete="off">
                         <input type='hidden' name='csrfmiddlewaretoken' value='gTZljXgnpvxn0fKZ1XkWrM1PrCGSjiCZ' />
-                        <div class="form-group marb20 ">
+                        <div class="form-group marb20 {% if register_form.errors.email %}
+                            errorput
+                        {% endif %} ">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
-                            <input  type="text" id="id_email" name="email" value="" placeholder="请输入您的邮箱地址" />
+                            <input  type="text" id="id_email" name="email" value="{{ register_form.email.value }}" placeholder="请输入您的邮箱地址" />
                         </div>
-                        <div class="form-group marb8 ">
+                        <div class="form-group marb8  ">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-                            <input type="password" id="id_password" name="password"  value="" placeholder="请输入6-20位非中文字符密码" />
+                            <input type="password" id="id_password" name="password"  value="{{ register_form.password.value }}" placeholder="请输入6-20位非中文字符密码" />
                         </div>
-                        <div class="form-group marb8 captcha1 ">
+                        <div class="form-group marb8 captcha1 {% if register_form.errors.captcha %}
+                        
+                        {% endif %}   ">
                             <label>验&nbsp;证&nbsp;码</label>
                             {{ register_form.captcha }}
                         </div>
-                        <div class="error btns" id="jsEmailTips"></div>
+                        <div class="error btns" id="jsEmailTips">
+                            {% for key,error in register_form.errors.items %}
+                                {{ error }}
+                            {% endfor %}
+                            {{ msg }}
+                        </div>
                         <div class="auto-box marb8">
                         </div>
                         <input class="btn btn-green" id="jsEmailRegBtn" type="submit" value="注册并登录" />
@@ -156,6 +166,7 @@
                     </form>
                 </div>
                 <p class="form-p">已有账号？<a href="login.html">[立即登录]</a></p>
+
             </div>
         </div>
     </div>
