--- a/templates/register.html
+++ b/templates/register.html
@@ -140,11 +140,11 @@
                             errorput
                         {% endif %} ">
                             <label>邮&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;箱</label>
-                            <input  type="text" id="id_email" name="email" value="{{ register_form.email.value }}" placeholder="请输入您的邮箱地址" />
+                            <input  type="text" id="id_email" name="email" value="{% if register_form.email.value != None %} {{ register_form.email.value }} {% endif %}" placeholder="请输入您的邮箱地址" />
                         </div>
                         <div class="form-group marb8  ">
                             <label>密&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;码</label>
-                            <input type="password" id="id_password" name="password"  value="{{ register_form.password.value }}" placeholder="请输入6-20位非中文字符密码" />
+                            <input type="password" id="id_password" name="password"  value="{% if register_form.password.value != None %} {{ register_form.password.value }} {% endif %}" placeholder="请输入6-20位非中文字符密码" />
                         </div>
                         <div class="form-group marb8 captcha1 {% if register_form.errors.captcha %}
                         
