--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -22,13 +22,13 @@
                         <li>
                             <h2>机构类别</h2>
                             <div class="cont">
-                                <a href="?city="><span class="active2">全部</span></a>
+                                <a href="?city="><span class="{% ifequal category '' %} active2 {% endifequal %}">全部</span></a>
 
-                                <a href="?ct=pxjg&city="><span class="">培训机构</span></a>
+                                <a href="?ct=pxjg"><span class="{% ifequal category 'pxjg' %}active2{% endifequal %}">培训机构</span></a>
 
-                                <a href="?ct=gx&city="><span class="">高校</span></a>
+                                <a href="?ct=gx"><span class="{% ifequal category 'gx' %} active2 {% endifequal %}">高校</span></a>
 
-                                <a href="?ct=gr&city="><span class="">个人</span></a>
+                                <a href="?ct=gr"><span class="{% ifequal category 'gr' %} active2 {% endifequal %}">个人</span></a>
 
                             </div>
                         </li>
@@ -36,9 +36,9 @@
                             <h2>所在地区</h2>
                             <div class="more">更多</div>
                             <div class="cont">
-                                <a href="?ct="><span class="active2">全部</span></a>
+                                <a href="?ct="><span class="{% ifequal city_id '' %}active2{% endifequal %}">全部</span></a>
                                 {% for city in all_citys %}
-                                    <a href="?city=1&ct="><span class="">{{ city.name }}</span></a>
+                                    <a href="?city={{ city.id }}"><span class="{% ifequal city_id city.id|stringformat:'i' %} active2 {% endifequal %}">{{ city.name }}</span></a>
                                 {% endfor %}
                             </div>
                         </li>
@@ -54,7 +54,7 @@
                                 <li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
                             </ul>
                         </div>
-                        {% for course_org in all_orgs %}
+                        {% for course_org in all_orgs.object_list %}
                             <dl class="des difdes">
                                 <dt>
                                     <a href="org-detail-homepage.html">
@@ -92,7 +92,31 @@
                     </div>
                     <div class="pageturn">
                         <ul class="pagelist">
+                            {% if all_orgs.has_previous %}
+                                <li class="long">
+                                    <a href="?{{ all_orgs.previous_page_number.querystring }}" class="prev">上一页 </a>
+                                </li>
+                            {% endif %}
+                            {% for page in all_orgs.pages %}
+                                {% if page %}
+                                    {% ifequal page all_orgs.number %}
+                                        <li class="active"><a href="?{{ page.querystring }}">{{ page }}</a></li>
+                                    {% else %}
+                                        <li><a href="?{{ page.querystring }}" class="page">{{ page }}</a></li>
+                                    {% endifequal %}
+                                {% else %}
+                                    <li class="none"><a href="">...</a></li>
+                                {% endif %}
+                            {% endfor %}
+                            {% if all_orgs.has_next %}
+                                <li class="long">
+                                    <a href="?{{ all_orgs.next_page_number.querystring }}" class="next">下一页</a>
+                                </li>
+                            {% endif %}
 
+
+
+                            <!--
 
 
 
@@ -115,7 +139,7 @@
 
 
                             <li class="long"><a href="?page=2">下一页</a></li>
-
+                        -->
 
                         </ul>
                     </div>
