--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -49,9 +49,9 @@
                     <div class="layout">
                         <div class="head">
                             <ul class="tab_header">
-                                <li class="active"><a href="?ct=&city=">全部</a> </li>
-                                <li class=""><a href="?sort=students&ct=&city=">学习人数 &#8595;</a></li>
-                                <li class=""><a href="?sort=courses&ct=&city=">课程数 &#8595;</a></li>
+                                <li class="{% if sort == '' %} active {% endif %} "><a href="?ct={{ category }}&city={{ city_id }}">全部</a> </li>
+                                <li class="{% if sort == 'students' %} active {% endif %}"><a href="?sort=students&ct={{ category }}&city={{ city_id }}">学习人数 &#8595;</a></li>
+                                <li class="{% if sort == 'courses' %} active {% endif %}"><a href="?sort=courses&ct={{ category }}&city={{ city_id }}">课程数 &#8595;</a></li>
                             </ul>
                         </div>
                         {% for course_org in all_orgs.object_list %}
@@ -113,34 +113,6 @@
                                     <a href="?{{ all_orgs.next_page_number.querystring }}" class="next">下一页</a>
                                 </li>
                             {% endif %}
-
-
-
-                            <!--
-
-
-
-
-                            <li class="active"><a href="?page=1">1</a></li>
-
-
-
-
-
-                            <li><a href="?page=2" class="page">2</a></li>
-
-
-
-
-
-                            <li><a href="?page=3" class="page">3</a></li>
-
-
-
-
-                            <li class="long"><a href="?page=2">下一页</a></li>
-                        -->
-
                         </ul>
                     </div>
                 </div>
@@ -168,35 +140,15 @@
 
             <div class="right companyrank layout">
                 <div class="head">授课机构排名</div>
-
-
-                <dl class="des">
-                    <dt class="num fl">1</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>慕课网</h1></a>
-                        <p>北京市</p>
-                    </dd>
-                </dl>
-
-                <dl class="des">
-                    <dt class="num fl">2</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>慕课网2</h1></a>
-                        <p>深圳市</p>
-                    </dd>
-                </dl>
-
-                <dl class="des">
-                    <dt class="num fl">3</dt>
-                    <dd>
-                        <a href="/company/2/"><h1>北京大学</h1></a>
-                        <p>北京市</p>
-                    </dd>
-                </dl>
-
-
-
-
+                {% for hot_org in hot_orgs %}
+                    <dl class="des">
+                        <dt class="num fl">{{ forloop.counter }}</dt>
+                        <dd>
+                            <a href="/company/2/"><h1>{{ hot_org.name }}</h1></a>
+                            <p>{{ hot_org.city }}</p>
+                        </dd>
+                    </dl>
+                {% endfor %}
             </div>
         </div>
     </section>
