课程机构中的用户咨询

--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -134,7 +134,7 @@
                     </div>
                     <p class="error company-tips" id="jsCompanyTips"></p>
                     <input class="btn" type="text" id="jsStayBtn" value="立即咨询 >" />
-                    <input type='hidden' name='csrfmiddlewaretoken' value='5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy' />
+                    {% csrf_token %}
                 </form>
             </div>
 
@@ -153,3 +153,4 @@
         </div>
     </section>
 {% endblock %}
+
