--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -34,7 +34,7 @@
 
             <div class="middle companyheader">
                 <div class="wp">
-                    <img class="fl" style="width: 112px;height: 103px" src="{% static 'media/org/2016/11/imooc.png' %}"/>
+                    <img class="fl" style="width: 112px;height: 103px" src="{{ MEDIA_URL }}{{ course_org.image }}"/>
                     <div class="head fl">
                         <h1>
                             慕课网
@@ -139,7 +139,7 @@
             score = $precision.attr('data-star-scope'),
             option =  {
                 half		: true,
-                path		: '../images/',
+                path		: '{% static 'images/' %}',
                 precision	: true,
                 size		: 24,
                 starOff		: 'g_star.png',
