课程机构页面基本完成

--- a/templates/org-detail-homepage.html
+++ b/templates/org-detail-homepage.html
@@ -3,6 +3,8 @@
 {% block title %}
     机构首页
 {% endblock %}
+<li>{% block page_path %}机构首页{% endblock %}</li>
+
 
 {% block right_forms %}
     <div class="right companycenter layout grouping" >
