--- a/templates/org_base.html
+++ b/templates/org_base.html
@@ -24,10 +24,32 @@
             <div class="top">
                 <div class="wp">
                     <div class="fl">
-                        <p>联系方式：<b>3333333333</b></p>
+                        <p>联系方式：<b>17373960305</b></p>
                     </div>
-                    <a style="color:white" class="fr registerbtn" href="register.html">注册</a>
-                    <a style="color:white" class="fr loginbtn" href="login.html">登录</a>
+                    {% if request.user.is_authenticated %}
+                        <div class="personal">
+                            <dl class="user fr">
+                                <dd>luffyk<img class="down fr" src="/static/images/top_down.png"/></dd>
+                                <dt><img width="20" height="20" src="/static/media/image/2016/12/default_big_14.png"/></dt>
+                            </dl>
+                            <div class="userdetail">
+                                <dl>
+                                    <dt><img width="80" height="80" src="/static/media/image/2016/12/default_big_14.png"/></dt>
+                                    <dd>
+                                        <h2>django</h2>
+                                        <p>luffyk</p>
+                                    </dd>
+                                </dl>
+                                <div class="btn">
+                                    <a class="personcenter fl" href="usercenter-info.html">进入个人中心</a>
+                                    <a class="fr" href="/logout/">退出</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                        <a style="color:white" class="fr registerbtn" href="{% url 'register' %}">注册</a>
+                        <a style="color:white" class="fr loginbtn" href="{% url 'login' %}">登录</a>
+                    {% endif %}
                 </div>
             </div>
 
@@ -49,7 +71,11 @@
                     </div>
                     <div class="btn fr collectionbtn  notlogin
                  "data-favid="22" data-fav-type="1">
-                        收藏
+                        {% if has_fav %}
+                            已收藏
+                        {% else %}
+                            收藏
+                        {% endif %} 
                     </div>
 
                 </div>
@@ -113,12 +139,12 @@
             data:{'fav_id':fav_id, 'fav_type':fav_type},
             async: true,
             beforeSend:function(xhr, settings){
-                xhr.setRequestHeader("X-CSRFToken", "5I2SlleZJOMUX9QbwYLUIAOshdrdpRcy");
+                xhr.setRequestHeader("X-CSRFToken", "{{ csrf_token }}");
             },
             success: function(data) {
                 if(data.status == 'fail'){
                     if(data.msg == '用户未登录'){
-                        window.location.href="login.html";
+                        window.location.href="{% url 'login' %}";
                     }else{
                         alert(data.msg)
                     }
@@ -131,7 +157,7 @@
     }
 
     $('.collectionbtn').on('click', function(){
-        add_fav($(this), 1, 2);
+        add_fav($(this), {{ course_org.id }}, 2);
     });
 
     $(function(){
