--- a/templates/course-video.html
+++ b/templates/course-video.html
@@ -69,7 +69,7 @@
                                     <ul class="video">
                                         {% for video in lesson.get_lesson_video  %}
                                             <li>
-                                                <a target="_blank" href='/video/3662' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_time }})
+                                                <a target="_blank" href='{% url 'course:video_play' video.id  %}' class="J-media-item studyvideo">{{ video.name }} ({{ video.learn_time }})
                                                     <i class="study-state"></i>
                                                 </a>
                                             </li>
