--- a/templates/course-comment.html
+++ b/templates/course-comment.html
@@ -8,7 +8,7 @@
         <div class="wp">
             <div class="crumbs">
                 <ul>
-                    <li><a href="index.html">首页</a>></li>
+                    <li><a href="{% url 'index' %}">首页</a>></li>
                     <li><a href="{% url 'course:course_list' %}">公开课程</a>></li>
                     <li><a href="{% url 'course:course_detail' course.id %}">课程详情</a>></li>
                     <li>课程评论</li>
@@ -107,11 +107,11 @@
                             <div class="box mb40">
                                 <h4>讲师提示</h4>
                                 <div class="teacher-info">
-                                    <a href="/u/315464/courses?sort=publish" target="_blank">
+                                    <a href="{% url 'org:teacher_detail' course.teacher.id %}" target="_blank">
                                         <img src='{{ MEDIA_URL }}{{ course.teacher.image }}' width='80' height='80' />
                                     </a>
                                     <span class="tit">
-          <a href="/u/315464/courses?sort=publish" target="_blank">{{ course.teacher.name }}</a>
+          <a href="{% url 'org:teacher_detail' course.teacher.id %}" target="_blank">{{ course.teacher.name }}</a>
         </span>
                                     <span class="job">{{ course.teacher.work_position }}</span>
                                 </div>
