--- a/templates/org-list.html
+++ b/templates/org-list.html
@@ -7,7 +7,7 @@
     <section>
         <div class="wp">
             <ul  class="crumbs">
-                <li><a href="index.html">首页</a>></li>
+                <li><a href="{% url 'index' %}">首页</a>></li>
                 <li>课程机构</li>
             </ul>
         </div>
@@ -63,8 +63,8 @@
                                 </dt>
                                 <dd>
                                     <div class="clearfix">
-                                        <a href="org-detail-homepage.html">
-                                            <h1>慕课网</h1>
+                                        <a href="{% url 'org:org_home' course_org.id %}">
+                                            <h1>{{ course_org.name }}</h1>
                                             <div class="pic fl">
 
                                                 <img src="{% static 'images/authentication.png' %}"/>
@@ -75,15 +75,18 @@
                                         </a>
                                     </div>
                                     <ul class="cont">
-                                        <li class="first"><p class="pic9">课程数：<span>1</span></p><p class="c7">学习人数：<span>1000</span></p></li>
-                                        <li class="c8" style="padding-left:18px;">北京市海淀区中关村北大街</li>
-                                        <li class="pic10" style="padding-left:18px;">经典课程：
+                                        <li class="first"><p class="pic9">课程数：<span>{{ course_org.course_nums }}</span></p><p class="c7">学习人数：<span>{{ course_org.students }}</span></p></li>
+                                        <li class="c8" style="padding-left:18px;">{{ course_org.address }}</li>
+                                        <!--
+                                            <li class="pic10" style="padding-left:18px;">经典课程：
 
                                             <a href="/diary/19/">c语言基础入门</a>
 
                                             <a href="/diary/16/">数据库基础</a>
 
-                                        </li>
+                                            </li>
+                                        -->
+
                                     </ul>
                                 </dd>
                                 <div class="buy start_groupbuy jsShowPerfect2" data-id="22"><br/>联系<br/>服务</div>
@@ -144,7 +147,7 @@
                     <dl class="des">
                         <dt class="num fl">{{ forloop.counter }}</dt>
                         <dd>
-                            <a href="/company/2/"><h1>{{ hot_org.name }}</h1></a>
+                            <a href="{% url 'org:org_home' hot_org.id %}"><h1>{{ hot_org.name }}</h1></a>
                             <p>{{ hot_org.city }}</p>
                         </dd>
                     </dl>
