用户中心我的课程，我的收藏

--- a/templates/usercenter-info.html
+++ b/templates/usercenter-info.html
@@ -1,7 +1,7 @@
 {% extends 'usercenter_base.html' %}
 {% load staticfiles %}
 {% block title %}
-    个人信息-衡师在线昂
+    个人信息-衡师在线网
 {% endblock %}
 {% block custom_bread %}
     <section>
