--- a/templates/usercenter_base.html
+++ b/templates/usercenter_base.html
@@ -25,7 +25,7 @@
         <div  class="header2 header">
             <div class="top">
                 <div class="wp">
-                    <div class="fl"><p>服务电话：<b>33333333</b></p></div>
+                    <div class="fl"><p>服务电话：<b>17373960305</b></p></div>
                     <!--登录后跳转-->
                     {% if request.user.is_authenticated %}
                         <div class="personal">
@@ -86,9 +86,9 @@
     <div class="wp list personal_list">
         <div class="left">
             <ul>
-                <li class="active2"><a href="usercenter-info.html">个人资料</a></li>
-                <li ><a href="usercenter-mycourse.html">我的课程</a></li>
-                <li ><a href="usercenter-fav-course.html">我的收藏</a></li>
+                <li class="active2"><a href="{% url 'users:user_info' %}">个人资料</a></li>
+                <li ><a href="{% url 'users:mycourse' %}">我的课程</a></li>
+                <li ><a href="{% url 'users:myfav_org' %}">我的收藏</a></li>
                 <li >
                     <a href="usercenter-message.html" style="position: relative;">
                         我的消息
@@ -260,15 +260,14 @@
     $('.jsDeleteFav_course').on('click', function(){
         var _this = $(this),
             favid = _this.attr('data-favid');
-        alert(favid)
         $.ajax({
             cache: false,
             type: "POST",
-            url: "/org/add_fav/",
+            url: "{% url "org:add_fav" %}",
             data: {
                 fav_type: 1,
                 fav_id: favid,
-                csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             async: true,
             success: function(data) {
@@ -283,11 +282,11 @@
         $.ajax({
             cache: false,
             type: "POST",
-            url: "/org/add_fav/",
+            url: "{% url "org:add_fav" %}",
             data: {
                 fav_type: 3,
                 fav_id: favid,
-                csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             async: true,
             success: function(data) {
@@ -295,7 +294,6 @@
             }
         });
     });
-
 
     $('.jsDeleteFav_org').on('click', function(){
         var _this = $(this),
@@ -303,11 +301,11 @@
         $.ajax({
             cache: false,
             type: "POST",
-            url: "/org/add_fav/",
+            url: "{% url "org:add_fav" %}",
             data: {
                 fav_type: 2,
                 fav_id: favid,
-                csrfmiddlewaretoken: '799Y6iPeEDNSGvrTu3noBrO4MBLv6enY'
+                csrfmiddlewaretoken: '{{ csrf_token }}'
             },
             async: true,
             success: function(data) {
@@ -315,6 +313,7 @@
             }
         });
     });
+
 </script>
 
 
