用户中心我的消息

--- a/templates/usercenter-fav-course.html
+++ b/templates/usercenter-fav-course.html
@@ -1,7 +1,7 @@
 {% extends 'usercenter_base.html' %}
 {% load staticfiles %}
 {% block title %}
-    我的收藏-衡师在线昂
+    我的收藏-衡师在线
 {% endblock %}
 {% block custom_bread %}
     <section>
